pridany potvrzovaci dialogy pro zmenu stavu sifry (organizator)
upraveny hlasky

change after rebase

confirmation dialog pro logout z organizer casti

change after rebase

confirmation dialog pro logout z organizer casti

--- a/src/main/resources/templates/fragments/organizerHeader.html
+++ b/src/main/resources/templates/fragments/organizerHeader.html
@@ -19,7 +19,7 @@
                         <a class="nav-link" href="/game/score">Score</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/logout">Odhlásit se</a>
+                        <a class="nav-link" href="/logout" th:onclick="return confirm('Opravdu se chcete odhlásit?')">Odhlásit se</a>
                     </li>
                 </ul>
             </div>
