--- a/src/main/resources/templates/progress/stage.html
+++ b/src/main/resources/templates/progress/stage.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="cz" xmlns:th="http://www.thymeleaf.org">
+<html lang="cs" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -15,7 +15,7 @@
     <title>Šifra - Stav</title>
 </head>
 <body>
-
+<div th:insert="fragments/organizerHeader :: header(progress)"></div>
 <div class="container">
     <div class="row">
         <div class="col-sm-12">
@@ -82,12 +82,6 @@
             </div>
         </div>
     </div>
-
-    <a align="center" href="#" th:href="@{/game/progress}"><b>Zpět na seznam šifer</b></a>
-    <form action="/logout" method="post">
-        <button type="submit">Odhlásit</button>
-    </form>
-
 </div>
 </body>
 </html>
