--- a/src/main/resources/templates/client/cypher/list.html
+++ b/src/main/resources/templates/client/cypher/list.html
@@ -13,11 +13,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <title>Šifry</title>
-
 </head>
-
 <body>
-
     <div th:insert="client/fragments/header :: header(cypher)"></div>
 
     <div class="container">
@@ -57,5 +54,23 @@
                 </a>
             </div>
         </div>
+    </div>
+    <a th:href="@{/finalplace}" id="footer">
+        <div id="final-place">
+            <div class="container">
+                <div class="row align-items-center">
+                    <div id="time" class="col">
+                        18:00
+                    </div>
+                    <div id="content" class="col">
+                        Vyhlášení výsledků
+                    </div>
+                    <div id="button" class="col">
+                        Zobrazit
+                    </div>
+                </div>
+            </div>
+        </div>
+    </a>
 </body>
 </html>
