--- a/src/main/resources/templates/clientcontact/list.html
+++ b/src/main/resources/templates/clientcontact/list.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="cs"
-      xmlns:th="http://www.springframework.org/schema/data/jaxb">
+<html lang="cs" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -16,7 +15,7 @@
 </head>
 
 <body>
-<div th:insert="client/fragments/header :: header(cypher)"></div>
+<div th:insert="client/fragments/header :: header(contact)"></div>
 <div class="container">
     <h2>Kontakt</h2>
     <div class="table-responsive">
