--- a/src/main/resources/templates/contact/form.html
+++ b/src/main/resources/templates/contact/form.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="cs"
-      xmlns:th="http://www.springframework.org/schema/data/jaxb">
+<html lang="cs" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
