--- a/src/main/resources/templates/progress/getHintList.html
+++ b/src/main/resources/templates/progress/getHintList.html
@@ -32,7 +32,7 @@
                     </p>
                     <button class="btn btn-sm flat btn-remove"
                             th:onclick="'javascript:revertHintDialog(' + ${hintTaken.hint.hintId} + ')'">
-                        Odebrat Hint
+                        Odebrat nápovědu
                     </button>
                 </div>
             </th:block>
@@ -97,7 +97,7 @@
                 <!-- Modal Header -->
                 <!-- Modal Body -->
                 <div class="modal-body text-center mb-1">
-                    <h5 class="mt-1 mb-2">Opravdu odebrat Hint?</h5>
+                    <h5 class="mt-1 mb-2">Opravdu odebrat nápovědu?</h5>
 
                     <div class="text-center mt-4">
                         <button id="cancelRevertHintBtn" type="button" class="btn btn-danger" data-dismiss="modal">Ne
