--- a/src/main/resources/templates/score/team.html
+++ b/src/main/resources/templates/score/team.html
@@ -24,10 +24,10 @@
             <td>Id</td>
             <td>Název šifry</td>
             <td>Body za šifru</td>
-            <td>Celkem použitých hintů</td>
-            <td>Id použitých hintů</td>
-            <td>Záporné body za hinty</td>
-            <td>Celkové score</td>
+            <td>Celkem použitých nápověd</td>
+            <td>Id použitých nápověd</td>
+            <td>Záporné body za nápovědy</td>
+            <td>Celkové skóre</td>
            </thead>
             <th:block th:each="team : ${teamWithDetailScores}">
                 <tr>
