--- a/src/main/resources/templates/client/finalplace/detail.html
+++ b/src/main/resources/templates/client/finalplace/detail.html
@@ -14,6 +14,9 @@
     <title>Místo vyhlášení</title>
 </head>
 <body>
+
+<div th:insert="client/fragments/header :: header(cypher)"></div>
+
 <div class="container">
     <div class="row">
         <div class="col-sm-12">
