--- a/src/main/resources/templates/client/cypher/list.html
+++ b/src/main/resources/templates/client/cypher/list.html
@@ -55,7 +55,7 @@
             </div>
         </div>
     </div>
-<div th:if="finalViewAllowed == true">
+<div th:if="${finalViewAllowed == true}">
     <a th:href="@{/finalplace}" id="footer">
         <div id="final-place">
             <div class="container">
