--- a/src/main/resources/templates/client/cypher/list.html
+++ b/src/main/resources/templates/client/cypher/list.html
@@ -55,8 +55,7 @@
             </div>
         </div>
     </div>
-<div th:if="${finalViewAllowed == true}">
-    <a th:href="@{/finalplace}" id="footer">
+    <a th:if="${finalViewAllowed}" th:href="@{/finalplace}" id="footer">
         <div id="final-place">
             <div class="container">
                 <div class="row align-items-center">
@@ -73,6 +72,5 @@
             </div>
         </div>
     </a>
-</div>
 </body>
 </html>
